--- a/basroba/app/locale/ka/LC_MESSAGES/django.po
+++ b/basroba/app/locale/ka/LC_MESSAGES/django.po
@@ -1,9 +1,3 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
@@ -12,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: ka\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,10 +15,6 @@ msgstr ""
 #: .\app\templates\auth.html:14
 msgid "Welcome Back"
 msgstr "კეთილი იყოს თქვენი დაბრუნება"
-
-#: .\app\templates\auth.html:15
-msgid ""
-msgstr ""
 
 #: .\app\templates\auth.html:20 .\app\templates\auth.html:43
 msgid "Email"
@@ -36,7 +26,7 @@ msgstr "პაროლი"
 
 #: .\app\templates\auth.html:25 .\app\templates\auth.html:52
 msgid "Login"
-msgstr "Login"
+msgstr "შესვლა"
 
 #: .\app\templates\auth.html:28
 msgid "Don't have an account?"
@@ -180,16 +170,12 @@ msgid "Size:"
 msgstr "ზომა:"
 
 #: .\app\templates\product.html:98
-#, fuzzy
-#| msgid "Favorites"
 msgid "Remove from Favorites"
-msgstr "ფავორიტები"
+msgstr "ფავორიტებიდან წაშლა"
 
 #: .\app\templates\product.html:100 .\app\templates\product.html:112
-#, fuzzy
-#| msgid "Favorites"
 msgid "Add to Favorites"
-msgstr "ფავორიტები"
+msgstr "ფავორიტებში დამატება"
 
 #: .\app\templates\product.html:104
 msgid "Remove from Cart"
